    - FindOpenVDB.cmake now correctly propagates CXX version requirements.
    - Added CMake support for linking against Jemalloc and TBB malloc
      and enabled Jemalloc by default for Linux and non-Maya builds
      and TBB malloc for all other builds.
    - Added a USE_COLORED_OUTPUT option to CMake to display compiler output
      in color.
    - Add an OPENVDB_CODE_COVERAGE option to CMake.

    Bug fixes:
    - Replaced std::vector with std::deque as the underlying container
      for util::PagedArray, to address a rare crash when reading
      from multiple threads while writing from another thread.
    - Fixed a bug in tools::computeScalarPotential() that could produce
      a corrupt result due to invalid memory access.
      [Reported by Edwin Braun]
    - Partially reverted tools::ClosestSurfacePoint's distance calculations
      to their pre-OpenVDB 5.0 behavior to address a bug in the
      fillWithSpheres() tool that caused generated spheres to sometimes
      extend outside the target volume.
    - CMake now correctly sets rpaths for the unit test binary.
    - Fixed a memory leak in a static variable pointer.
      [Contributed by Autodesk]

    ABI changes:
    - ABI versions 3 and older are now deprecated, and support for them will be
      removed in a future release. Until then, define the macro
      OPENVDB_USE_DEPRECATED_ABI (or set the CMake OPENVDB_USE_DEPRECATED_ABI
      option to ON) to suppress deprecation messages when compiling OpenVDB or
      dependent code.

    API changes:
    - Changed a type alias in points::RandomLeafFilter.
    - Removed the TableT template argument from util::PagedArray.
      The table type is now hardcoded to std::deque.
    - The minimum supported version of GLFW is now 3.1.

    Python:
    - CMake now always produces a .so for the Python module on UNIX platforms.
    - Fixed a compile-time error when building the Python module for Python 3.
      [Reported by yurivict]

    Houdini: