@@ -29,12 +29,13 @@ Version 6.2.0 - In development
       and TBB malloc for all other builds.
     - Added a USE_COLORED_OUTPUT option to CMake to display compiler output
       in color.
-    - Add an OPENVDB_CODE_COVERAGE option to CMake.
+    - Added an OPENVDB_CODE_COVERAGE option to CMake.
 
     Bug fixes:
     - Replaced std::vector with std::deque as the underlying container
       for util::PagedArray, to address a rare crash when reading
       from multiple threads while writing from another thread.
+    - Fixed a bug that could cause an empty CoordBBox to report nonzero volume.
     - Fixed a bug in tools::computeScalarPotential() that could produce
       a corrupt result due to invalid memory access.
       [Reported by Edwin Braun]
